# knots-hub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
doc/source/: cli.rst  conf.py  config.rst  index.rst
doc/source/_injected/: exec-config-autodoc.py  exec-config-envvar.py  exec-config-vendor-installers.py  exec-public-api.py
doc/source/_static/: extra.css
doc/source/public-api/: cli.rst  config.rst  constants.rst  filesystem.rst  index.rst  installer.rst
knots_hub/: __init__.py  __main__.py  _logging.py  _terminal.py  _utils.py  cli.py  config.py  constants.py  filesystem.py  installer.py  serializelib.py  uninstaller.py  utils.py
knots_hub/_installer/: __init__.py  _dependencies.py  _python.py
knots_hub/installer/: __init__.py  _base.py  _hub.py  _hubinstallfile.py  _hubrecord.py  _io.py  _python.py  _rez.py  _shortcut.py  _vendorrecord.py
knots_hub/installer/vendors/: __init__.py  _base.py  _install.py  _io.py  _knots.py  _python.py  _rez.py
knots_hub/launchers/: __init__.py  hub-launcher.ps1
scripts/: app-build-nuitka.py  server-deploy.py
tests/: conftest.py  pytest.ini  test_cli.py  test_end2end.py  test_filesystem.py  test_installer.py  test_installer_hubinstallfile.py  test_serializelib.py  test_uninstaller.py
tests/data/: installerlist.1.json
tests/demo-1/: demo.py  requirements.txt
tests/scripts/: create-windows-shortcut.ps1  knotshub_tester.py  test.knots-hub.1.ps1
tests/scripts/resources/: rez-config.yml
tests/scripts/resources/profiles/: tknots.yml
