[tool.poetry]
name = "knots-hub"
version = "0.2.1"
description = "Entry point tool to access Knots pipeline."
authors = ["Liam Collod <lcollod@gmail.com>"]
readme = "./README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
pythonning = { git = "https://github.com/knotsanimation/pythonning.git" }
kloch = { tag = "v0.9.0", git = "https://github.com/knotsanimation/kloch.git" }
kloch_rezenv = { branch = "main", git = "https://github.com/knotsanimation/kloch-launcher-rezenv.git" }
kloch_kiche = { branch = "main", git = "https://github.com/knotsanimation/kloch-launcher-kiche.git" }
# extras
black = "*"
pytest = "*"
nuitka = "2.2"

[tool.poetry.extras]
dev = ["black", "nuitka"]
test = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
