[tool.poetry]
name = "knots-hub"
version = "0.2.1"
description = "Entry point tool to access Knots pipeline."
authors = ["Liam Collod <lcollod@gmail.com>"]
readme = "./README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
pythonning = { git = "https://github.com/knotsanimation/pythonning.git" }
kloch = { tag = "v0.9.0", git = "https://github.com/knotsanimation/kloch.git" }
kloch_rezenv = { branch = "main", git = "https://github.com/knotsanimation/kloch-launcher-rezenv.git" }
kloch_kiche = { branch = "main", git = "https://github.com/knotsanimation/kloch-launcher-kiche.git" }
# extras
black = "*"
pytest = "*"
nuitka = "2.2"
# extras.doc
Sphinx = { version = "^7.3.7", python = ">=3.9", optional = true }
sphinx-autobuild = { version = "2024.2.4", python = ">=3.9", optional = true }
sphinx-exec-code = { version = "0.12", python = ">=3.9", optional = true }
sphinx-copybutton = { version = "0.5", python = ">=3.9", optional = true }
furo = { version = "^2024.4.27", python = ">=3.9", optional = true }
myst_parser = { version = "^3", python = ">=3.9,<3.13", optional = true }

[tool.poetry.extras]
dev = ["black", "nuitka"]
test = ["pytest"]
doc = [
    "Sphinx",
    "myst_parser",
    "sphinx-autobuild",
    "sphinx-exec-code",
    "sphinx-copybutton",
    "furo",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
